AWS x NVIDIA Hackathon 2025 - GENESIS-SOVEREIGN submission ready

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,40 @@
 # GENESIS-SOVEREIGN Environment Configuration
+# AWS x HEX Hackathon 2025
 
-# AWS Configuration
+# ============================================================================
+# NVIDIA NIM (REQUIRED for Hackathon)
+# ============================================================================
+# Get your API key from: https://build.nvidia.com
+NVIDIA_NIM_API_KEY=nvapi-...
+
+# NVIDIA NIM Endpoints (use defaults or override)
+# NVIDIA_LLM_ENDPOINT=https://integrate.api.nvidia.com/v1/chat/completions
+# NVIDIA_EMBEDDING_ENDPOINT=https://integrate.api.nvidia.com/v1/embeddings
+
+# Models (do not change unless you know what you're doing)
+# NVIDIA_LLM_MODEL=meta/llama-3.1-70b-instruct
+# NVIDIA_EMBEDDING_MODEL=nvidia/nv-embedqa-e5-v5
+
+# Enable NVIDIA NIM (must be true for hackathon)
+USE_NVIDIA_NIM=true
+
+# ============================================================================
+# AWS Configuration (REQUIRED for EKS Deployment)
+# ============================================================================
 AWS_REGION=us-east-1
 AWS_ACCESS_KEY_ID=your_access_key
 AWS_SECRET_ACCESS_KEY=your_secret_key
 EKS_CLUSTER_NAME=genesis-sovereign
 
+# ============================================================================
 # NVIDIA NIM Configuration
+# ============================================================================
 NVIDIA_NIM_API_KEY=your_nvidia_api_key
 NVIDIA_NIM_ENDPOINT=https://api.nvidia.com/v1
 
+# ============================================================================
 # GitHub Configuration
+# ============================================================================
 GITHUB_TOKEN=your_github_token
 GITHUB_ORG=your_organization
 
